// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> should render Counter with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast blue variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="badge.background.blue.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="badge.text.blue.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast default color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="badge.background.blue.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="badge.text.blue.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast information color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast information variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast negative color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast negative variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast neutral color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast neutral variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast notice color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast notice variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast positive color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render high contrast positive variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.highContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.highContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render large size Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="large"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={100}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast blue variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="badge.background.blue.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="badge.text.blue.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(218, 89%, 51%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast default color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="badge.background.blue.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="badge.text.blue.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(218, 89%, 51%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast information color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(193, 100%, 35%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast information variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.information.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.information.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(193, 100%, 35%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast negative color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(8, 73%, 47%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast negative variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.negative.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.negative.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(8, 73%, 47%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast neutral color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast neutral variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast notice color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(38, 97%, 38%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast notice variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.notice.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.notice.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(38, 97%, 38%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast positive color Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(160, 100%, 26%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render low contrast positive variant Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.positive.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.positive.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(160, 100%, 26%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render medium size Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="medium"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Counter /> should render small size Counter 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="counter"
    display="flex"
    style={
      [
        {},
      ]
    }
  >
    <View
      backgroundColor="feedback.background.neutral.lowContrast"
      data-blade-component="base-box"
      platform="onMobile"
      size="small"
      style={
        [
          {},
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="center"
        overflow="hidden"
        style={
          [
            {},
          ]
        }
      >
        <Text
          accessible={true}
          color="feedback.text.neutral.lowContrast"
          data-blade-component="text"
          fontFamily="text"
          fontSize={25}
          fontStyle="normal"
          fontWeight="regular"
          lineHeight={50}
          numberOfLines={1}
          style={
            [
              {
                "color": "hsla(216, 27%, 36%, 1)",
                "fontFamily": "Lato",
                "fontSize": 10,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 16,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          20
        </Text>
      </View>
    </View>
  </View>
</View>
`;
